# kdev-mercurial

./: .kde-ci.yml  CMakeLists.txt  TODO  debug.h  kdevmercurial-log.style  kdevmercurial.categories  kdevmercurial.desktop  kdevmercurial.desktop.cmake  kdevmercurial.json  mercurialannotatejob.cpp  mercurialannotatejob.h  mercurialjob.cpp  mercurialjob.h  mercurialplugin.cpp  mercurialplugin.h  mercurialpluginmetadata.cpp  mercurialpushjob.cpp  mercurialpushjob.h  mercurialvcslocationwidget.cpp  mercurialvcslocationwidget.h
cmake/: FindKDevPlatform.cmake
icons/: CMakeLists.txt
models/: mercurialheadsmodel.cpp  mercurialheadsmodel.h  mercurialqueueseriesmodel.cpp  mercurialqueueseriesmodel.h
po/ar/: kdevmercurial.po
po/bg/: kdevmercurial.po
po/bs/: kdevmercurial.po
po/ca/: kdevmercurial.po
po/ca@valencia/: kdevmercurial.po
po/cs/: kdevmercurial.po
po/de/: kdevmercurial.po
po/el/: kdevmercurial.po
po/en_GB/: kdevmercurial.po
po/eo/: kdevmercurial.po
po/es/: kdevmercurial.po
po/et/: kdevmercurial.po
po/eu/: kdevmercurial.po
po/fi/: kdevmercurial.po
po/fr/: kdevmercurial.po
po/ga/: kdevmercurial.po
po/gl/: kdevmercurial.po
po/he/: kdevmercurial.po
po/hi/: kdevmercurial.po
po/hu/: kdevmercurial.po
po/it/: kdevmercurial.po
po/ja/: kdevmercurial.po
po/ka/: kdevmercurial.po
po/ko/: kdevmercurial.po
po/lt/: kdevmercurial.po
po/mai/: kdevmercurial.po
po/nb/: kdevmercurial.po
po/nds/: kdevmercurial.po
po/nl/: kdevmercurial.po
po/nn/: kdevmercurial.po
po/pa/: kdevmercurial.po
po/pl/: kdevmercurial.po
po/pt/: kdevmercurial.po
po/pt_BR/: kdevmercurial.po
po/ro/: kdevmercurial.po
po/ru/: kdevmercurial.po
po/sk/: kdevmercurial.po
po/sl/: kdevmercurial.po
po/sv/: kdevmercurial.po
po/th/: kdevmercurial.po
po/tr/: kdevmercurial.po
po/ug/: kdevmercurial.po
po/uk/: kdevmercurial.po
po/zh_CN/: kdevmercurial.po
po/zh_TW/: kdevmercurial.po
python/: CMakeLists.txt  kdevmercurial.py
tests/: CMakeLists.txt  initTest.cpp  initTest.h  test_mercurial.cpp  test_mercurial.h
ui/: mercurialheadswidget.cpp  mercurialheadswidget.h  mercurialheadswidget.ui  mercurialqueuesmanager.cpp  mercurialqueuesmanager.h  mercurialqueuesmanager.ui
